--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <p id="texto"> 0 </p>
     <button id="botao" onclick="clicado()">Cilk</button>
 
-    <script src="atividade9.js"></script>
+    <script src="JS/atividade5.js"></script>
 </body>
 </html>
